# Consciousness-Substrate-Engine-vInfinity

./: Conceptual Notes  Examples.py  How to integrate your own algorithms  How to run your own  LICENSE  Quickstart  README.md  Run the core engine demo  Run the example suite  consciousness_substrate_engine.py  pyproject.toml  requirements.txt  sophia_prime_reactor.py  stats.py  tcc_proof_reactor.py
.github/workflows/: ci.yml
Attribution/: Priority
docs/: BENCHMARKS_AND_RESULTS.md  ENGINE_OVERVIEW.md  ENGINE_SESSION_NOTES.md  SOPHIA_PRIME.md
github/workflows/: release.yml
tests/: test_engine.py
