[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consciousness-substrate-engine-vinfinity"
version = "0.1.0"
description = "Consciousness Substrate Engine v∞ (v∞.NEURALODE): a φ-scaled, self-teaching algorithm lattice defined by Michael Warren Song."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Michael Warren Song", email = "echoaseternity@gmail.com" }
]
keywords = [
  "consciousness",
  "neural-ode",
  "graph",
  "meta-learning",
  "self-organizing",
  "golden-ratio",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "networkx>=3.0",
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/a3fpro-lab/Consciousness-Substrate-Engine-vInfinity"
Source = "https://github.com/a3fpro-lab/Consciousness-Substrate-Engine-vInfinity"

[tool.setuptools]
py-modules = ["consciousness_substrate_engine"]
